# mirrornote-diarization-mlx

./: .env.example  .gitignore  README.md  pyproject.toml  results.tsv
docs/: IDENTITY.md  IMPLEMENTATION_PLAN.md  mlx-segmentation-notes.md
docs/superpowers/plans/: 2026-04-27-m4a-segmentation-parity.md  2026-04-27-m4b-reference-probe-architecture-snapshot.md  2026-04-27-mlx-pyannet-segmentation-parity.md
docs/superpowers/specs/: 2026-04-27-m4a-segmentation-parity-design.md
reports/segmentation-benchmark/: runtime-benchmark.json
scripts/: benchmark_segmentation_runtime.py
src/mirrornote_diarization/: __init__.py  chunking.py  lstm_metal.py  mlx_pyannet.py  mlx_segmentation.py  parity_report.py  probe_artifacts.py  pyannet_contract.py  pyannote_probe.py  segmentation_parity.py  weight_conversion.py
tests/: test_chunking.py  test_mlx_pyannet.py  test_mlx_segmentation_contract.py  test_package_smoke.py  test_parity_report.py  test_probe_artifacts.py  test_probe_inspect_cli.py  test_pyannet_contract.py  test_pyannet_weight_mapping.py  test_pyannote_probe_cli.py  test_pyannote_probe_contract.py  test_pyannote_weight_export.py  test_segmentation_mlx_cli.py  test_segmentation_parity_cli.py  test_weight_mapping.py
